src/app/globals.css
@import "tailwindcss";
/* Theme*/
@import "primereact/resources/themes/lara-light-cyan/theme.css";
/* Core CSS*/
@import "primereact/resources/primereact.min.css";
/* Icons*/
@import "primeicons/primeicons.css";
/* PrimeFlex*/
@import "primeflex/primeflex.css";

:root {
  width: 100%;
  height: auto;
  box-sizing: border-box;
}

@theme {
  @keyframes marquee {
    from {
      transform: translateX(0);
    }
    to {
      transform: translateX(-100%);
    }
  }
  @keyframes blink-resize {
    0%,
    100% {
      transform: scale(1);
      opacity: 1;
    }
    50% {
      transform: scale(1.2); /* Phóng to 20% */
      opacity: 0.9; /* Mờ đi */
    }
  }
  @keyframes heartbeat {
    0%,
    100% {
      transform: scale(1.1); /* Lên 110% */
    }
    50% {
      transform: scale(0.9); /* Xuống 90% */
    }
  }

  @keyframes light-heartbeat {
    0%,
    100% {
      transform: scale(1.02); /* Lên 110% */
    }
    50% {
      transform: scale(0.98); /* Xuống 90% */
    }
  }

  /* Tạo class tiện ích cho Tailwind */
  /* 1.5s là tốc độ, bạn có thể chỉnh thành 1s nếu muốn nhanh hơn */
  --animate-marquee: marquee linear infinite;
  --animate-marquee-reverse: marquee linear infinite reverse;
  --animate-blink-resize: blink-resize 1.5s ease-in-out infinite;
  --animate-heartbeat: heartbeat 1.5s ease-in-out infinite;
  --animate-light-heartbeat: light-heartbeat 2s ease-in-out infinite;
}

html,
body {
  scroll-behavior: smooth !important;
  overflow: hidden;
}

body {
  box-sizing: border-box;
}

.pause-hover:hover {
  animation-play-state: paused;
}

